# fastapi-portfolio

./: .env_sample  .gitignore  LICENSE  README.md  docker-compose.yml  index.js  macbooks.html  main.html  package-lock.json  package.json  pyproject.toml  styles.css
alembic/versions/: 3d84abb65ddb_jwt_tokens_black_list.py  85551320403f_auth_tokens.py
backend/: Dockerfile  alembic.ini  celery.sh  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 133cd22d2a93_portfolio_info_type_writer_info.py  35be40dd3dc8_likes_post.py  4f3a6d5c42b5_user_model.py  5b805317c167_postcategory.py  c411edc643b0_post.py  e3d6008612e2_socials.py  f591ea526a70_comment.py
backend/src/: api_key.py  main.py
backend/src/auth/: api.py  dependencies.py  models.py  phrase.py  schemas.py  services.py  token.py
backend/src/blog/: models.py
backend/src/portfolio_info/: api.py  exceptions.py  models.py  schemas.py  services.py
backend/src/settings/: __init__.py  celery.py  config.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html  particles.css  particles.js
frontend/src/: App.js  typewritter.js
frontend/src/components/: Auth.jsx  PageChangeAnimation.jsx  styles.css
js/: index_iphones.js  index_macbooks.js
public/: index.html  particles.css  resolution.css
src/: App.js
src/Assets/Footer/: Footer.css  Footer.jsx
src/Assets/Home/: Block1.css  Block1.jsx  Block2.css
src/Assets/Loading/: Loading.css  Loading.jsx
src/Pages/: Blog.jsx  Home.jsx  NoPage.jsx  Projects.jsx  SingUp.jsx
src/auth/: api.py  hashing.py  models.py  schemas.py  services.py  token.py  validators.py
src/components/: styles.css
src/settings/: config.py  database.py  phrase.py
(+32 files in other folders)
